fixed spacing for header on get started, changed font bold in welcome page and added dots

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -25,6 +25,9 @@
 
 .success-stories-header {
     font-size: 24px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
     line-height: 40px;
     color: #ffffff;
     letter-spacing: 0.008em;
